--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="background_color">#191926</color>
+    <color name="title_color">#ECECEC</color>
+    <color name="tagline_color">#FF3466</color>
+    <color name="active_star_color">#FF3365</color>
+    <color name="inactive_star_color">#6D6D80</color>
+    <color name="actor_name_color">#D8D8D8</color>
 </resources>
