--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,8 @@
     <color name="active_star_color">#FF3365</color>
     <color name="inactive_star_color">#6D6D80</color>
     <color name="actor_name_color">#D8D8D8</color>
+    <color name="time_color">#565665</color>
+    <color name="movie_border_color">#535369</color>
+    <color name="movie_bg_color">#262639</color>
+    <color name="age_limit_bg_color">#191926</color>
 </resources>
